<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="mail_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="hint_search">Поиск</string>
    <string name="url_yandex">https://practicum.yandex.ru/android-developer/</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail">nikulin-7@ya.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_time">Track time</string>
    <string name="artrist_name">Artrist name</string>
    <string name="track_name">Track name</string>
    <string name="internet_wrong_2">Загрузка не удалась.Проверьте</string>
    <string name="internet_wrong">Проблемы со связью</string>
    <string name="reload">Обновить</string>
    <string name="internet_wrong_3">подключение к интернету</string>
    <string name="nothing_search">Ничего не нашлось</string>
    <string name="your_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="timing">00:30</string>
    <string name="duration">Длительность</string>
    <string name="time_2">5:35</string>
    <string name="album">Альбом</string>
    <string name="album_name">Название альбома</string>
    <string name="year">Год</string>
    <string name="year_2023">2023</string>
    <string name="genre">Жанр</string>
    <string name="genre_name">Rock</string>
    <string name="country">Страна</string>
    <string name="country_name">Россия</string>
    <string name="bt_back">Кнопка назад</string>
    <string name="placeholder">Плейсхолдер</string>
    <string name="add_playlist">Добавить плейлист</string>
    <string name="bt_play">Кнопка плейера</string>
    <string name="bt_like">Кнопка лайка</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="add_new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="timing_zero">00:00</string>
    <string name="name_hint">Название*</string>
    <string name="description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="end_playlist_title">Завершить создание плейлиста?</string>
    <string name="playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="end_playlist">Завершить</string>
    <string name="my_playlists">Мои плейлисты</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан.</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="change_info">Редактировать информацию</string>
    <string name="only_shared">Поделиться</string>
    <string name="cant_share">В этом плейлисте нет списка терокв,которым можно поделиться</string>
</resources>