<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.practicum.playlistmaker.player.activity.MediaPlayerFragment">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id = "@+id/layout_media"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/twenty_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/twenty_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/twenty_four" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/twenty_four" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/sixteen_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/sixteen_dp" />

    <ImageView
        android:id="@+id/back_icon_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:srcCompat="@drawable/ic_back_icon"
        app:tint="?attr/colorOnSecondary"
        android:contentDescription="@string/bt_back"/>

    <ImageView
        android:id="@+id/cover_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline"
        app:srcCompat="@drawable/ic_placeholder_media"
        android:contentDescription="@string/placeholder"
        />

    <TextView
        android:id="@+id/track_name_media"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/track_name"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/cover_media"
        />

    <TextView
        android:id="@+id/artist_name_media"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/artrist_name"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/track_name_media"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.0"/>

    <ImageButton
        android:id="@+id/bt_add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@null"
        android:src="?attr/add_playlist"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/artist_name_media"
        android:contentDescription="@string/add_playlist"/>

    <ImageButton
        android:id="@+id/bt_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:src="@drawable/ic_bt_play"
        app:layout_constraintEnd_toStartOf="@+id/bt_follow"
        app:layout_constraintStart_toEndOf="@+id/bt_add_to_playlist"
        app:layout_constraintTop_toBottomOf="@+id/artist_name_media"
        android:contentDescription="@string/bt_play"/>

    <ImageButton
        android:id="@+id/bt_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@null"
        android:src="?attr/bt_follow"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/artist_name_media"
        android:contentDescription="@string/bt_like"/>

    <TextView
        android:id="@+id/timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/timing_zero"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bt_follow"
        app:layout_constraintStart_toEndOf="@+id/bt_add_to_playlist"
        app:layout_constraintTop_toBottomOf="@+id/bt_play" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/duration"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/timing"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/time_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/time_2"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/timing"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventeen_dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/album"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/duration"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/album_name"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxEms="20"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline_16dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/album"
        app:layout_constraintTop_toBottomOf="@+id/time_duration"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventeen_dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/year"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/album"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/year_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventeen_dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/year_2023"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/album_name"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventeen_dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/genre"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/year"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/genre_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventeen_dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/genre_name"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/year_score"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventeen_dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/country"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/genre"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventeen_dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/country_name"
        android:textColor="?attr/track_text"
        android:textFontWeight="400"
        android:textSize="@dimen/thirteen_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@+id/genre_name"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@drawable/rounder" />
        <TextView
            android:id="@+id/add_in_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_in_playlist"
            android:textColor="?attr/track_text"
            android:textFontWeight="500"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
             />
        <Button
            android:id="@+id/bt_add_playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/reload_button"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginTop="28dp"
            android:layout_gravity="center"
            android:text="@string/add_new_playlist"
            android:textAllCaps="false"
            android:textColor="?attr/colorSecondary"
            android:textFontWeight="500"
            android:textSize="14sp"
            app:cornerRadius="56dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animationCache="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>