<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:padding="@dimen/primary_dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            />

    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:id="@+id/search"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/icons"
        app:cornerRadius="@dimen/primary_dp"
        android:text="@string/search"
        android:textSize="@dimen/medium_text_size"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:scaleType="centerCrop"
        android:foreground="?attr/selectableItemBackground"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginTop="@dimen/primary_dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:id="@+id/media"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/icons"
        app:cornerRadius="@dimen/primary_dp"
        android:text="@string/media"
        android:textSize="@dimen/medium_text_size"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:scaleType="centerCrop"
        android:foreground="?attr/selectableItemBackground"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginTop="@dimen/primary_dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:id="@+id/setting"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/icons"
        app:cornerRadius="@dimen/primary_dp"
        android:text="@string/settings"
        android:textSize="@dimen/medium_text_size"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:scaleType="centerCrop"
        android:foreground="?attr/selectableItemBackground"
        />
</LinearLayout>
