<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id = "@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/ic_back_icon"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="28dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:paddingTop="14dp"
        android:paddingLeft="61dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/black_theme"
        android:layout_gravity="start"
        android:paddingStart="@dimen/primary_dp"
        android:paddingTop="64dp"
        android:paddingBottom="@dimen/second_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/low_text_size"
        />
        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingTop="61dp"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/low_text_size"
            android:paddingTop="@dimen/second_dp"
            android:paddingStart="@dimen/primary_dp"
            android:paddingBottom="@dimen/second_dp"
        />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_share"
            android:scaleType="fitEnd"
            android:paddingTop="@dimen/padding_top"
            android:paddingBottom="@dimen/second_dp"
            android:paddingRight="@dimen/primary_dp"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_support"
            android:textColor="@color/black"
            android:textSize="@dimen/low_text_size"
            android:paddingTop="@dimen/second_dp"
            android:paddingStart="@dimen/primary_dp"
            android:paddingBottom="@dimen/second_dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_support"
            android:scaleType="fitEnd"
            android:paddingTop="@dimen/padding_top"
            android:paddingBottom="@dimen/second_dp"
            android:paddingRight="14dp"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/low_text_size"
            android:paddingTop="@dimen/second_dp"
            android:paddingStart="@dimen/primary_dp"
            android:paddingBottom="@dimen/second_dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow"
            android:scaleType="fitEnd"
            android:paddingTop="@dimen/padding_top"
            android:paddingBottom="@dimen/second_dp"
            android:paddingRight="20dp"
            />
    </FrameLayout>
    </LinearLayout>
