<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_playlist_fragment"
    android:background="?attr/colorSecondary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.practicum.playlistmaker.playlist.CreatePlaylistsFragment"
    >


    <ImageView
        android:id="@+id/back_icon_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/primary_dp"
        android:layout_marginTop="@dimen/primary_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_icon"
        app:tint="?attr/colorOnSecondary"
        android:contentDescription="@string/bt_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/add_new_playlist"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:textFontWeight="500"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/back_icon_media"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id ="@+id/set_image"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:src = "@drawable/rectangle_dash"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/naming_layout"
        style="@style/InputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/primary_dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/primary_dp"
        app:layout_constraintTop_toBottomOf="@id/set_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/name_hint"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/naming_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:lines="1"
        android:singleLine="true"
        android:textColor="?attr/bt_play"
        android:textCursorDrawable="@drawable/cursor_edit_text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/description_layout"
        style="@style/InputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/primary_dp"
        android:layout_marginTop="@dimen/primary_dp"
        android:layout_marginRight="@dimen/primary_dp"
        app:layout_constraintTop_toBottomOf="@id/naming_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/description_hint"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:imeOptions = "actionDone|flagNoExtractUi"
            android:lines="1"
            android:singleLine="true"
            android:textColor="?attr/bt_play"
            android:textCursorDrawable="@drawable/cursor_edit_text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id = "@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/playlist_button_create"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginLeft="@dimen/seventeen_dp"
        android:layout_marginRight="@dimen/seventeen_dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>