<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/artwork"
        android:layout_width="@dimen/image_dp"
        android:layout_height="@dimen/image_dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_none_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:layout_marginTop="14dp"
            android:text="@string/track_name"
            android:textColor="?attr/track_text"
            android:textSize="@dimen/low_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artrist_name"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/little_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="@dimen/five_dp"
                android:layout_marginBottom="19dp"
                android:src="@drawable/ic_ellipse_1"
                app:tint = "?attr/colorSecondaryVariant"/>

            <TextView
                android:id="@+id/track_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_time"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/little_text_size" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_arrow"
        app:tint="?attr/colorSecondaryVariant" />
</LinearLayout>